<resources>
    <string name="app_name">Memories</string>
    <string name="self_gratitude_journal">Self. Gratitude. Journal</string>
    <string name="what_are_you_grateful_for_today">What are you grateful for today</string>
    <string name="get_started">GET STARTED</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="login_text">LOGIN</string>
    <string name="or">OR</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="username">Username</string>
    <string name="or_ald_acc">Or, Already have an account?</string>
    <string name="user">User</string>
    <string name="title_text">Title</string>
    <string name="your_thoughts">Your thoughts…</string>
    <string name="save">SAVE</string>
    <string name="your_memory">Your memory…</string>
    <string name="add_image">Add image</string>
    <string name="today">Today</string>
    <string name="success_text">Success</string>
    <string name="fail_text">Failed</string>
    <string name="empty_field_na">Empty fields not allowed</string>
    <string name="add_thoughts">Add thoughts</string>
    <string name="sign_out">Sign out</string>
    <string name="no_thoughts_added_yet">No thoughts added yet</string>
    <string name="date_added">Date added</string>
    <string name="share">Share</string>
    <string name="delete">delete</string>
    <string name="couldnt_load_image">Could not load image</string>
    <string name="sure_delete">Are you sure to delete?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="sure_signout">Do you wish to sign out?</string>
    <string name="update">Update</string>
    <string name="zero">0</string>
    <string name="find_friends">Find Friends</string>
    <string name="request">Request</string>
    <string name="requested">Requested</string>
    <string name="no_one_here">No one here</string>
    <string name="my_friends">My friends</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="accept">Accept</string>
    <string name="accepted">Accepted</string>
    <string name="view_friendsPost">View Friends posts</string>
    <string name="friend_s_activities">Friend\'s Activities</string>
    <string name="friend_request_list">Friend request list:</string>
    <string name="choose_friends">Choose friends :</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">send</string>
    <string name="add_room">Add room</string>
    <string name="room_name">Name of room</string>
    <string name="chat_room">Chat rooms</string>
    <string name="in_chat_room">In chat room:</string>
    <string name="fullname">Enter your name</string>
    <string name="profile_photo">Profile photo</string>
    <string name="name">Name</string>
    <string name="email">e-mail</string>
    <string name="my_profile">My profile</string>
    <string name="_0_likes">0 likes</string>
    <string name="_0">0</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="send_location">Send location</string>
    <string name="share_to">Share to ...</string>
</resources>
