<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:background="@color/centerColor"
            android:alpha="0.9"
            android:elevation="10dp">

            <TextView
                android:id="@+id/fjr_username_id"
                android:text="@string/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:padding="10dp"
                android:textSize="17sp"
                android:gravity="start"
                android:layout_weight="1"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/fjr_image_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            android:contentDescription="@string/your_memory"
            android:src="@drawable/pexelsphoto"/>

        <TextView
            android:id="@+id/fjr_title_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/title_text"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/fjr_thoughts_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/your_thoughts"
            android:padding="10dp"
            android:paddingTop="18dp"
            android:paddingStart="10dp"
            android:paddingEnd="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fjr_timestamp_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/date_added"
                android:padding="10dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/fjr_likeCount_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:textSize="16sp"
                android:text="@string/_0"/>

            <ImageButton
                android:id="@+id/fjr_like_button_id"
                android:padding="15dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_thumb_up_black_18dp"
                android:tint="@android:color/holo_blue_dark"
                android:background="@android:color/transparent"
                android:contentDescription="@string/delete" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>