<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:progressBarStyleLarge"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/email_login_form_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/login_emailText_id"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"/>

        <EditText
            android:id="@+id/login_password_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/login_button_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_text"
            android:background="@android:color/transparent"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/or"
            android:textStyle="bold"
            android:gravity="center"/>

        <Button
            android:id="@+id/create_acc_button_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_account"
            android:background="@android:color/transparent"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>