<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoomActivity">

    <EditText
        android:id="@+id/cr_roomName_id"
        android:layout_width="292dp"
        android:layout_height="57dp"
        android:layout_marginStart="4dp"
        android:ems="10"
        android:hint="@string/room_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/cr_addRoom_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_room"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cr_roomName_id"
        app:srcCompat="@android:drawable/ic_menu_send" />

    <ListView
        android:id="@+id/cr_listView_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>